--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SERVER_PORT = 80
-SESSION_SECRET = asdasdasdqweqweqdasdasdqweasdasdasdasda
+SESSION_SECRET = 'asdasdasdqweqweqdasdasdqweasdasdasdasda'
