--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "dotenv": "^16.0.1",
+        "ejs": "^3.1.8",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "md5": "^2.3.0",
